Add task_4 densenet model margin=1

--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {
     "scrolled": true
    },
@@ -1389,11 +1389,11 @@
       "  )\n",
       "  (classifier): NeuralNet(\n",
       "    (fc): Sequential(\n",
-      "      (0): Linear(in_features=2208, out_features=512, bias=True)\n",
+      "      (0): Linear(in_features=2208, out_features=1024, bias=True)\n",
       "      (1): PReLU(num_parameters=1)\n",
-      "      (2): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "      (2): BatchNorm1d(1024, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
       "      (3): Dropout(p=0.35, inplace=False)\n",
-      "      (4): Linear(in_features=512, out_features=128, bias=True)\n",
+      "      (4): Linear(in_features=1024, out_features=256, bias=True)\n",
       "    )\n",
       "  )\n",
       ")\n"
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {
     "scrolled": false
    },
@@ -1488,12 +1488,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91504d5893be4afd90ecd8e30ca5f6dc",
+       "model_id": "51810c7836a04cb186f19b4ba9b94c5c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=3568.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=10704.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1502,7 +1502,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3755a252c69d4e588b8a780a98444795",
+       "model_id": "5ebfe4d82bdf4eb0b94c0f4403373fbd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1537,13 +1537,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 11/14]: Loss 0.120 (0.132), Val Accuracy 0.7428571428571429, Train Accuracy 0.7131446188340808\n"
+      "\r",
+      "\r",
+      "[Epoch 1/12]: Loss 1.463 (1.416), Val Accuracy 0.6861344537815126, Train Accuracy 0.6227753643497758\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebe6bae8e2714b2caf29b2e43520aeab",
+       "model_id": "2c6919d9946d477886db769e39e64493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1578,13 +1580,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 12/14]: Loss 0.117 (0.129), Val Accuracy 0.7323529411764705, Train Accuracy 0.7191178531390134\n"
+      "\r",
+      "\r",
+      "[Epoch 2/12]: Loss 0.773 (1.035), Val Accuracy 0.6428571428571429, Train Accuracy 0.6455647421524664\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfc1b1153c66457a9a435b6078cef52f",
+       "model_id": "e357ea1b78754fa18ff12c93d46f4e41",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1619,13 +1623,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 13/14]: Loss 0.134 (0.128), Val Accuracy 0.7327731092436974, Train Accuracy 0.722411014573991\n"
+      "\r",
+      "\r",
+      "[Epoch 3/12]: Loss 0.896 (0.934), Val Accuracy 0.7, Train Accuracy 0.6615050448430493\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "070b62ad21744d788f02f5c4d78a5718",
+       "model_id": "dfe6d78fd16f41cf89e902c87e018c6a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1660,7 +1666,353 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 14/14]: Loss 0.116 (0.126), Val Accuracy 0.738655462184874, Train Accuracy 0.7276835762331838\n"
+      "\r",
+      "\r",
+      "[Epoch 4/12]: Loss 0.918 (0.882), Val Accuracy 0.6966386554621848, Train Accuracy 0.6699831838565022\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3de1a652e1294b33a7c641ab73dc4f97",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 5/12]: Loss 0.884 (0.843), Val Accuracy 0.7100840336134454, Train Accuracy 0.6764819226457399\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37e58e1aca98488aa96a70e015753260",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 6/12]: Loss 0.767 (0.817), Val Accuracy 0.7247899159663865, Train Accuracy 0.680458239910314\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ed7f2533dd649fe980bc2fad6fb426c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 7/12]: Loss 0.750 (0.776), Val Accuracy 0.7067226890756303, Train Accuracy 0.6898998038116592\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8177d4ae397c4d88acedbc6b65708c0c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 8/12]: Loss 0.857 (0.747), Val Accuracy 0.7315126050420168, Train Accuracy 0.6977298206278026\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9b804985b6bb4c239afe720e4f37df7d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 9/12]: Loss 0.743 (0.724), Val Accuracy 0.7399159663865547, Train Accuracy 0.6994114349775785\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "072ca196ceb0408e87599049870715e4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 10/12]: Loss 0.688 (0.695), Val Accuracy 0.746218487394958, Train Accuracy 0.7096062219730942\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e88f6fd1a394cc4bab8979c040ac6ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 11/12]: Loss 0.705 (0.678), Val Accuracy 0.7420168067226891, Train Accuracy 0.7126541479820628\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56a5cf9b6dd34e5b9c6e084e4f152a57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "\r",
+      "[Epoch 12/12]: Loss 0.722 (0.654), Val Accuracy 0.7420168067226891, Train Accuracy 0.7214125560538116\n"
      ]
     }
    ],
@@ -1668,17 +2020,17 @@
     "#model_pretrained.load_state_dict(torch.load('trained_models/densenet161_model/densenet161_model_epoch19.pth'))\n",
     "#model_pretrained = model_pretrained.to(device)\n",
     "\n",
-    "criterion_pretrained = nn.TripletMarginLoss(margin=0.2)\n",
+    "criterion_pretrained = nn.TripletMarginLoss(margin=1)\n",
     "optimizer_pretrained = torch.optim.Adam(params_to_update, lr=0.001)\n",
     "scheduler_pretrained = None\n",
     "#scheduler_pretrained = torch.optim.lr_scheduler.MultiStepLR(optimizer_pretrained, milestones=[10], gamma=0.5)\n",
     "#scheduler_pretrained = torch.optim.lr_scheduler.StepLR(optimizer_pretrained, 2, gamma=0.1)\n",
     "\n",
     "batch_size = 64\n",
-    "epochs_pretrained = 4\n",
-    "starting_epoch = 10\n",
+    "epochs_pretrained = 12\n",
+    "starting_epoch = 0\n",
     "\n",
-    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, starting_epoch=starting_epoch, epochs=epochs_pretrained, model_name='densenet161_model')"
+    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, starting_epoch=starting_epoch, epochs=epochs_pretrained, model_name='densenet161_margin1_model')"
    ]
   },
   {
@@ -1690,13 +2042,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6095224407eb48c1ad9d63d1a37bfbd4",
+       "model_id": "0491bb24b0bd4f66b5288c9aea33d96c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1721,14 +2073,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set accuracy [pre-trained model]: 0.7373892953407778\n"
+      "Train set accuracy [pre-trained model]: 0.7302831938950537\n"
      ]
     }
    ],
@@ -1738,13 +2090,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6af14a2837f423ab1e152b105022302",
+       "model_id": "9a47cbfe061d438bbfa44b732f7d91c7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1770,7 +2122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
