Update task_3 with MLP

--- a/task_3/task_3.ipynb
+++ b/task_3/task_3.ipynb
@@ -12,17 +12,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data=pd.read_csv(\"data/train.csv\")"
+    "# Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -77,96 +75,119 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111995</th>\n",
-       "      <td>GSME</td>\n",
+       "      <th>5</th>\n",
+       "      <td>IWHA</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111996</th>\n",
-       "      <td>DLPT</td>\n",
+       "      <th>6</th>\n",
+       "      <td>GEFV</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111997</th>\n",
-       "      <td>SGHC</td>\n",
+       "      <th>7</th>\n",
+       "      <td>KARS</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111998</th>\n",
-       "      <td>KIGT</td>\n",
+       "      <th>8</th>\n",
+       "      <td>IMGW</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>111999</th>\n",
-       "      <td>PGPT</td>\n",
+       "      <th>9</th>\n",
+       "      <td>KYRK</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>112000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Sequence  Active\n",
-       "0          DKWL       0\n",
-       "1          FCHN       0\n",
-       "2          KDQP       0\n",
-       "3          FNWI       0\n",
-       "4          NKRM       0\n",
-       "...         ...     ...\n",
-       "111995     GSME       0\n",
-       "111996     DLPT       0\n",
-       "111997     SGHC       0\n",
-       "111998     KIGT       0\n",
-       "111999     PGPT       0\n",
-       "\n",
-       "[112000 rows x 2 columns]"
+       "  Sequence  Active\n",
+       "0     DKWL       0\n",
+       "1     FCHN       0\n",
+       "2     KDQP       0\n",
+       "3     FNWI       0\n",
+       "4     NKRM       0\n",
+       "5     IWHA       0\n",
+       "6     GEFV       0\n",
+       "7     KARS       0\n",
+       "8     IMGW       0\n",
+       "9     KYRK       0"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "data"
+    "# Load the training dataframe\n",
+    "train_data = pd.read_csv(\"data/train.csv\")\n",
+    "\n",
+    "# Preview the train dataframe\n",
+    "display(train_data.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D K W L DKWL\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-8395d2ae38d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mch_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Sequence\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mch_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Sequence\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "def split(word): \n",
-    "    return [char for char in word]"
+    "# Split sequences into characters\n",
+    "first = []\n",
+    "second = []\n",
+    "third = []\n",
+    "fourth = []\n",
+    "\n",
+    "for _, row in data.iterrows():\n",
+    "    ch_1, ch_2, ch_3, ch_4 = row[\"Sequence\"]\n",
+    "    \n",
+    "    first.append(ch_1)\n",
+    "    second.append(ch_2)\n",
+    "    third.append(ch_3)\n",
+    "    fourth.append(ch_4)\n",
+    "\n",
+    "# Create X_df\n",
+    "X_df_dict = {\n",
+    "    \"first\": first,\n",
+    "    \"second\": second,\n",
+    "    \"third\": third,\n",
+    "    \"fourth\": fourth\n",
+    "}\n",
+    "X_df = pd.DataFrame(X_df_dict)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "first=[]\n",
-    "second=[]\n",
-    "third=[]\n",
-    "fourth=[]\n",
-    "for index,row in data.iterrows():\n",
-    "    first.append(split(row[0])[0])\n",
-    "    second.append(split(row[0])[1])\n",
-    "    third.append(split(row[0])[2])\n",
-    "    fourth.append(split(row[0])[3])"
+    "## OneHot Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -176,55 +197,37 @@
        "              handle_unknown='ignore', sparse=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_split=pd.DataFrame()\n",
-    "data_split[\"First\"]=first\n",
-    "data_split[\"Second\"]=second\n",
-    "data_split[\"Third\"]=third\n",
-    "data_split[\"Fourth\"]=fourth\n",
     "enc = OneHotEncoder(handle_unknown='ignore')\n",
-    "enc.fit(data_split)"
+    "enc.fit(X_df)\n",
+    "\n",
+    "display(enc.categories_)\n",
+    "\n",
+    "# Ensure the onehots are the same for each letter\n",
+    "assert((enc.categories_[0] == enc.categories_[1]).all() and (enc.categories_[1] == enc.categories_[2]).all() and (enc.categories_[2] == enc.categories_[3]).all())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
-       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object),\n",
-       " array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
-       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object),\n",
-       " array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
-       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object),\n",
-       " array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
-       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object)]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "enc.categories_"
+    "# Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "enc_data=enc.transform(data_split).toarray()"
+    "# Create training np arrays\n",
+    "X = enc.transform(data_split).toarray()\n",
+    "y = train_data[\"Active\"].values"
    ]
   },
   {
@@ -235,6 +238,7 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X=enc_data\n",
     "y=np.array(data[\"Active\"])\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.1, random_state=42)"
@@ -242,56 +246,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Pipeline] .... (step 1 of 2) Processing standardscaler, total=   0.2s\n",
+      "[Pipeline] ..... (step 2 of 2) Processing mlpclassifier, total=  26.6s\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Pipeline(memory=None,\n",
-       "         steps=[('minmaxscaler', MinMaxScaler(copy=True, feature_range=(0, 1))),\n",
-       "                ('svc',\n",
-       "                 SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None,\n",
-       "                     coef0=0.0, decision_function_shape='ovr', degree=3,\n",
-       "                     gamma='auto', kernel='rbf', max_iter=-1, probability=False,\n",
-       "                     random_state=None, shrinking=True, tol=0.001,\n",
-       "                     verbose=False))],\n",
-       "         verbose=False)"
+       "         steps=[('standardscaler',\n",
+       "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       "                ('mlpclassifier',\n",
+       "                 MLPClassifier(activation='relu', alpha=0.0001, batch_size=128,\n",
+       "                               beta_1=0.9, beta_2=0.999, early_stopping=False,\n",
+       "                               epsilon=1e-08, hidden_layer_sizes=(15,),\n",
+       "                               learning_rate='constant',\n",
+       "                               learning_rate_init=0.001, max_fun=15000,\n",
+       "                               max_iter=200, momentum=0.9, n_iter_no_change=10,\n",
+       "                               nesterovs_momentum=True, power_t=0.5,\n",
+       "                               random_state=None, shuffle=True, solver='adam',\n",
+       "                               tol=0.0001, validation_fraction=0.1,\n",
+       "                               verbose=False, warm_start=False))],\n",
+       "         verbose=True)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf = make_pipeline(StandardScaler(), SVC(gamma='auto'))\n",
+    "clf = make_pipeline(StandardScaler(), MLPClassifier(hidden_layer_sizes=(15,), batch_size=128, verbose=True), verbose=True)\n",
     "clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6265223170277658"
+       "0.864994026284349"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,12 +318,12 @@
    "source": [
     "from sklearn.metrics import f1_score\n",
     "y_pred=clf.predict(X_val)\n",
-    "f1_score(y_val, y_pred, average='macro')"
+    "f1_score(y_val, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,12 +380,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.savetxt(\"submission.txt\", y_test, fmt=\"%d\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
